<resources>

    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an Account!</string>
    <string name="sign_up">Sign Up</string>
    <string name="home_page">Home Page</string>
    <string name="app_name">Key Note</string>
    <string name="log_out">Log out</string>
    <string name="save">Save</string>
    <string name="note_title">Note Title</string>
    <string name="note_content">Note Content</string>
    <string-array name="note_categories">
        <item>Work</item>
        <item>Personal</item>
    </string-array>
</resources>