<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/activity_signup_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activity_signup_et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@+id/activity_signup_et_email"
        app:layout_constraintStart_toStartOf="@+id/activity_signup_et_email"
        app:layout_constraintTop_toBottomOf="@+id/activity_signup_et_email" />

    <EditText
        android:id="@+id/activity_signup_et_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@+id/activity_signup_et_password"
        app:layout_constraintStart_toStartOf="@+id/activity_signup_et_password"
        app:layout_constraintTop_toBottomOf="@+id/activity_signup_et_password" />

    <TextView
        android:id="@+id/activity_signup_tv_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintBottom_toTopOf="@+id/activity_signup_tv_login"
        tools:layout_editor_absoluteX="151dp" />

    <Button
        android:id="@+id/activity_signup_bt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_signup_et_confirm_password" />

    <TextView
        android:id="@+id/activity_signup_tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/key_notes_light_blue"
        android:letterSpacing=".05"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>